--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,41 +8,170 @@ video {
   object-fit: cover;
   object-position: center;
  }
-header {width: 100%; top:0;   left:0; text-decoration: none; }  
+
+li { text-decoration: none; }  
+@media screen and (max-width:800px) {
+	li { text-decoration: none; } 
+} 
+
+header {width: 100%; top:0;   left:0; text-decoration: none; } 
 .header {height:11rem; position: fixed;}
-.header-2 {height:9rem; position: fixed;}  
-li { text-decoration: none; }  		   
-/*header {
+video { 
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  text-align: center;
-  color: white;
-  position: fixed;} */
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+ }
+ @media screen and (max-width:800px) {
+ 	video { opacity:0.1; height: 30%;	}
+ 	.header {height:2rem;}
+
+}
 
 
-/*.inputAuth{padding:30; font-size:20px; font-weight: bold;}*/
+/*BODY*/
+.container-2{
+	display:flex;
+	width: 100%; 
+	}	
+.container-left{width:100%;}
+
+.container-right{ 
+	 width:30%;  
+	 height:100vh;
+	 float:right;
+	 padding-right:10px;
+	 padding-left:10px;
+	 display:block;
+	 border-left: 2px inset #BFBFBF;  
+	 margin-top:1%; } 
+
+@media screen and (max-width:800px) 
+{
+	.container-2{ display:block;}	
+	.container-left{width:100%;}
+	.container-right{ width:100%; } 
+}
+
+
+/*FOOTER*/
+footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-top:2%; height: 8rem;
+	 display: flex; flex-direction: column-reverse; font-size: 1.5rem;>
+}
+
+@media screen and (max-width:800px) {
+	footer{background-color: blue; font-size: 1rem;}
+	.img-footer{ width: 15%; }
+}
+
+/*IMAGES*/
+.img-left{width:100%; height:30%;}
+.img-insc{	width:20%; height: 30%;}
+.img-tool-admin{  width:90%; height: auto }
+.img-tool-admin-2{  width:100%; height: 80%; }
+.img-curs{ width: 50%; height:auto; border-radius: 10%;}
+.img-curs-2{ width: 70%; height: 80%;}
+	   
+		.irAtras{	margin-right:5%; width: 90px; height: 100px;}	
+		.irHome{width: 120px; height: 120px;}
+		.img-act{ width:50px; height:50px;}
+		.img-AddNew{ width:130px; height:150px; margin-left:5%;}
+		.img-user{width: 15%;}
+		.img-user-2{width: 18%;}
+		/*.img-cursoVue{ width:400px; height:280px;}
+		.img-logoVue{ width:200px; height:150px;}
+		*/
+
+@media screen and (max-width:800px) {
+ 	.img-left{width:100%; height:30%;}
+ 	.img-insc{	width:10%; height:10%; }
+ 	.img-tool-admin{  width:50%; height: 80%; }
+ 	.img-tool-admin-2{  width:50%; height: 80%; }
+}
+
+/*VIEW TOOL-ADMIN*/
+.toll-enl{ font-size:1rem; text-align:center; margin-left: 5%; margin-right: 5%; margin-top: 2%;}
+.toll-enl-2{ font-size:1rem; text-align:center;margin-left:5%; margin-top: 2%;}
+/*VIEW HOME*/
+@media screen and (max-width:800px) {
+	
+}
+
+
+/*VIEW MENU */
+	/* cursos*/
+@media screen and (max-width:800px) {
+		.search-cur, .nota-none{display: none;}
+}
+
+	/*nosotros*/
+.saludo{color:#0000FF; font-size:2rem;}
+.nosot{font-size:1.5rem; font-style:oblique; margin-left:5%; margin-right: 5%; text-align:justify; }
+@media screen and (max-width:800px) {
+	.saludo{font-size:1rem;}
+	.nosot{font-size:0.5rem;  }
+}
+ /* inscribirse*/
+.reg{ display: inline-flex; padding: 0; margin:0; }
+.img-pago{	background-image: url(../images/Fpagos.png); width: 50%; }
+
+@media screen and (max-width:800px) {
+	.img-pago{	 width: 10%;
+	}
+}
+
+
+
+/*.img-priv{ width:20px; height:15px;}*/
+
+.publicNo{ display:block; margin-right:5%; color: #FF0000; font-size:1.5rem;}	
+.publicSi{display:block; margin-right:5%; color: #008000;}
+
+table, th, td {  border: 1px solid black; font-size:1.5rem; }
+tr td:last-child{
+       width:1%;
+       white-space:nowrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .auth{ font-size:1rem; display:flex;}
 .user-auth{ color: #0000FF;}	
 .cont-auth-home{ display:flex;width: 100%; margin-top:1%; }
 
+.form_edit{  border: white 8px outset; margin-left:1%;  padding:3%;	margin-right:15%;	margin-top:3%; 	font-weight: bold; }		
 
 		   
-.desc-curs{ font-size: 0.8rem;}	   
-.nota-curs{margin-left: 20%; margin-right: 1%; font: oblique bold 120% cursive;font-size: 1rem;}
+
 
 .notas{font-size:0.7rem; color:red; margin-top:25px; margin-right:1%;}
 .title-op{color:#BFBFBF; font-size: 2rem;}
 .logo{width:250%; height:80%; opacity: 0.5;}
+.logo-2{width:100%; height:80%; opacity: 0.5;}
+
 @media screen and (max-width:800px) {
-	header {width: 100%; top:0;   left:0; text-decoration: none; }  
 	.auth{ font-size:0.5rem;}
 	.user-auth{ color: red;}
-	.logo{width:60%; height:40%;}
+	.logo{width:20%; height:20%;}
 	.header {height:5rem; position: fixed;}
 	.group-menu{margin-top: 15%;}
 	.auth{ font-size:0.5rem; display:flex;}
 	.desc{ font-size: 0.8rem;}
 	.nota-curs{font-size: 0.5rem;  width: 250px;   white-space: nowrap;    text-overflow: ellipsis;     overflow: hidden;}
-
 	.title{	font-size: 0.5rem; 	}
 	.title-op{color:#BFBFBF; font-size: 1rem;}
 }
@@ -53,33 +182,25 @@ li { text-decoration: none; }
 .text-bold{font-weight: bold;}
 
 
-.img-curs{padding:0; width: 100%; height: auto;}
+.nota-curs{margin-left: 20%; margin-right: 1%; font: oblique bold 120% cursive;font-size: 1rem;}
 
-@media screen and (max-width:800px) {
-	.img-curs{padding:0; width: 40%; height: 20%}
-}
+
+
+/*.title-sp{ padding-left: 10%; }*/
+
+
+/*@media screen and (max-width:800px) {
+	.img-curs{ width: 40%; height: 20%}
+}*/
 		   
-.bar-right{ 
-	 width:30%;  
-	 height:100vh;
-	 float:right;
-	 padding-right:10px;
-	 padding-left:10px;
-	 display:block;
-	 border-left: 2px inset #BFBFBF;  
-	 margin-top:1%; }              
+             
 	 
 	 
 		/* BOTTUN */
 .bt-save{ width:100%;margin-top:10%;;}
 .bt-canc{ margin-top:5px;}
 
-.container-left{width:100%;}
-/*.container-Auth{ width:100%;}		
-.container-livew{ }	*/
 
-
-.cont-2{ display:flex;width: 100%; }	
 /*
 	width:100%;
 	overflow-y: scroll;	
@@ -87,13 +208,6 @@ li { text-decoration: none; }
 	height:100vh;
 */
 
-/*--View  Menu---*/
-
-	/*nosotros*/
-.saludo{color:#0000FF; font-size:2rem;}
-.nosot{font-size:1.5rem; font-style:oblique; margin-left:5%; margin-right: 5%; text-align:justify; }
-.nosot2{font-size:1.3rem; font-style:oblique; margin-left:5%; margin-right: 5%; text-align:justify; }
-.nosot3{font-size:1rem; font-style:oblique; margin-left:5%; margin-right: 5%; text-align:justify; }
 
 /*cursos*/
 
@@ -127,9 +241,7 @@ li { text-decoration: none; }
 	margin-top:3%; 	
 	font-weight: bold; }
 			
-footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); margin-top:2%;}
-.form_edit{  border: white 8px outset; margin-left:1%;  padding:3%;	margin-right:15%;	margin-top:3%; 	font-weight: bold; }		
-#footer{height: 8rem; 	bottom: 0; 	color: white;  	padding:0.5%; }		
+	
 
 
 small img{
@@ -137,23 +249,6 @@ small img{
 	height: 70%;
 }
 
-.img-insc{
-	width:420px;
-	height: 250px;
-}
-			
-
-		
-.irAtras{	margin-right:5%; width: 90px; height: 100px;}	
-.irHome{width: 120px; height: 120px;}
-.img-left{ width: 100%; height: 400px;}
-.img-act{ width:50px; height:50px;}
-.img-AddNew{ width:130px; height:150px; margin-left:5%;}
-.img-user{width: 15%;}
-.img-user-2{width: 18%;}
-/*.img-cursoVue{ width:400px; height:280px;}
-.img-logoVue{ width:200px; height:150px;}
-*/
 
 .info{ font-size:1.5rem;background:#C1DFE9; padding:2%; border-radius: 20px;}
 
@@ -183,20 +278,13 @@ small img{
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px; 
 	margin-top:1%;
-	padding:1%;}
+	padding:1%;
+	width: 100%;
+	}
 	
 .listCursVue{ }	
 	
-.img-priv{ width:20px; height:15px;}
 
-.publicNo{ display:block; margin-right:5%; color: #FF0000; font-size:1.5rem;}	
-.publicSi{display:block; margin-right:5%; color: #008000;}
-
-table, th, td {  border: 1px solid black; font-size:1.5rem; }
-tr td:last-child{
-       width:1%;
-       white-space:nowrap;
-}
 .text-inp{ font-size:1rem; padding:4%;}
 
 .title{ font-family: fantasy; 
@@ -212,7 +300,7 @@ tr td:last-child{
 
 
 
-.title-curs{color:#2D2D84; font-size:3rem;}
+/*.title-curs{color:#2D2D84; font-size:3rem;}*/
 .desc-curs{font-size:2rem;}
 
 .title-2{ font-family: fantasy; 
@@ -244,7 +332,7 @@ tr td:last-child{
 	text-decoration: none; 
 	font-size:1rem;; }
 	
-.toll{ 
+/*.toll{ 
 	text-align: center;
 	display:flex; 
 	width: 100%;  
@@ -256,10 +344,9 @@ tr td:last-child{
 }
 .tool-img-2{
 	width: 300px;
-	height: 350px;
+*/	height: 350px;
 }
-.toll-enl{ font-size:1rem; text-align:center; margin-left: 5%; margin-right: 5%;}
-.toll-enl-2{ font-size:1rem; text-align:center;margin-left:5%;}
+
 
 
 .tool-liv{	width: 100%; margin-right: 2%; margin-left: 2%;}
