--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,21 +1,10 @@
-video { 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;   
-  opacity:0.5;
-  object-fit: cover;
-  object-position: center;
- }
-
 li { text-decoration: none; }  
 @media screen and (max-width:800px) {
 	li { text-decoration: none; } 
 } 
 
 header {width: 100%; top:0;   left:0; text-decoration: none; } 
-.header {height:11rem; position: fixed;}
+
 video { 
   position: absolute;
   top: 0;
@@ -31,13 +20,18 @@ video {
 
 }
 
+.header {height:11rem; position: fixed;}
+@media screen and (max-width:800px) {
+ 	.header {height:2rem;}
 
+}
 /*BODY*/
 .container-2{
 	display:flex;
 	width: 100%; 
-	}	
-.container-left{width:100%;}
+}	
+.container-left{width:100%;
+}
 
 .container-right{ 
 	 width:30%;  
@@ -47,13 +41,19 @@ video {
 	 padding-left:10px;
 	 display:block;
 	 border-left: 2px inset #BFBFBF;  
-	 margin-top:1%; } 
+	 margin-top:1%; 
+} 
 
-@media screen and (max-width:800px) 
-{
-	.container-2{ display:block;}	
-	.container-left{width:100%;}
-	.container-right{ width:100%; } 
+@media screen and (max-width:800px){
+	.container-2{ 
+		display:block;
+	}	
+	.container-left{
+		width:100%;
+	}
+	.container-right{
+		width:100%;
+	} 
 }
 
 
@@ -61,7 +61,6 @@ video {
 footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-top:2%; height: 8rem;
 	 display: flex; flex-direction: column-reverse; font-size: 1.5rem;>
 }
-
 @media screen and (max-width:800px) {
 	footer{background-color: blue; font-size: 1rem;}
 	.img-footer{ width: 15%; }
@@ -74,6 +73,7 @@ footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-
 .img-tool-admin-2{  width:100%; height: 80%; }
 .img-curs{ width: 50%; height:auto; border-radius: 10%;}
 .img-curs-2{ width: 70%; height: 80%;}
+.img-si{width:20%; height: 10%;}
 	   
 		.irAtras{	margin-right:5%; width: 90px; height: 100px;}	
 		.irHome{width: 120px; height: 120px;}
@@ -84,6 +84,10 @@ footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-
 		/*.img-cursoVue{ width:400px; height:280px;}
 		.img-logoVue{ width:200px; height:150px;}
 		*/
+.auth{ font-size:1rem; display:flex;}
+.user-auth{ color: #0000FF;}	
+.cont-auth-home{ display:flex;width: 100%; margin-top:1%; }
+
 
 @media screen and (max-width:800px) {
  	.img-left{width:100%; height:30%;}
@@ -149,16 +153,14 @@ tr td:last-child{
 
 
 
-.auth{ font-size:1rem; display:flex;}
-.user-auth{ color: #0000FF;}	
-.cont-auth-home{ display:flex;width: 100%; margin-top:1%; }
+
 
 .form_edit{  border: white 8px outset; margin-left:1%;  padding:3%;	margin-right:15%;	margin-top:3%; 	font-weight: bold; }		
 
 		   
 
 
-.notas{font-size:0.7rem; color:red; margin-top:25px; margin-right:1%;}
+.notas{font-size:0.7rem; color:red; margin-top:10%; margin-right:1%;}
 .title-op{color:#BFBFBF; font-size: 2rem;}
 .logo{width:250%; height:80%; opacity: 0.5;}
 .logo-2{width:100%; height:80%; opacity: 0.5;}
@@ -171,7 +173,7 @@ tr td:last-child{
 	.group-menu{margin-top: 15%;}
 	.auth{ font-size:0.5rem; display:flex;}
 	.desc{ font-size: 0.8rem;}
-	.nota-curs{font-size: 0.5rem;  width: 250px;   white-space: nowrap;    text-overflow: ellipsis;     overflow: hidden;}
+	.nota-curs{font-size: 0.5rem;  width: 25%;   white-space: nowrap;    text-overflow: ellipsis;     overflow: hidden;}
 	.title{	font-size: 0.5rem; 	}
 	.title-op{color:#BFBFBF; font-size: 1rem;}
 }
