--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,9 @@ video {
  	.header {height:2rem;}
 
 }
+.menu-alt{
+	margin-top: 12%; margin-right: 10%;
+}
 /*BODY*/
 .container-2{
 	display:flex;
@@ -64,13 +67,16 @@ footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-
 	@media screen and (max-width:800px) {
 		footer, .img-footer{display: none;}
 		}
-
+.form-2{ margin-top: 2%; border: 1px solid; border-color: #898585; padding: 2%; background: #fff; }
 .img-curs{ width: 50%; height:auto; border-radius: 10%;}
+.img-curs-2{ width: 100%; height:80%; border-radius: 10%;}
 .img-curs-detaill img{ width: 60%;}
 .img-pago{	background-image: url(../images/Fpagos.png); width: 50%; }
 .img-left{width:100%; height:30%;}
 .img-left-2{width:60%; height:30%; float: center;}
 .img-tool-admin{  width:95%; height: 100%; }
+.img-icon{ width:15%; }
+
 @media screen and (max-width:800px) {
  	.img-pago{	 width: 10%;}
  	.img-insc{	width:10%; height:10%; }
@@ -90,7 +96,7 @@ footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-
 .logo-2{width:100%; height:100%; }
 
 		@media screen and (max-width:800px) {
-			.logo{width:20%; height:20%;}
+		/*	.logo{width:50%; height:50%;}*/
 			.logo-2{width:100%; height:60%; }
 		}
 .marg-tool{margin-top:5%; margin-left: 2%; margin-right: 2%}
@@ -325,7 +331,7 @@ small img{
 
 
 
-.tool-liv{	width: 100%; margin-right: 2%; margin-left: 2%;}
+/*.tool-liv{	width: 100%; margin-right: 2%; margin-left: 2%;}
 
 .tool-table{width: 100%; margin-right:2%;}	
 	
@@ -336,7 +342,7 @@ small img{
 .search-input{ font-weight: bold; font-size:1.5rem; width:100%;}
 
 .ver-insc{height: auto; width: 10%; flex-direction: 5%;}
-
+*/
 
 
 
