--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,16 +6,25 @@ html{overflow: auto;}
 header {width: 100%; top:0;   left:0; text-decoration: none; } 
 
 video { 
-  position: absolute;
+
+ }
+#video{
+	  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
- }
+  object-position: center;	
+}
+#video-curs{
+
+  width: 50%;
+  height: 30%;
+
+}
  @media screen and (max-width:800px) {
- 	video { opacity:0.1; height: 30%;	}
+ 	#video { opacity:0.1; height: 30%;	}
  	.header {height:2rem;}
 
 }
@@ -26,7 +35,7 @@ video {
 
 }
 .menu-alt{
-	margin-top: 12%; margin-right: 10%;
+	margin-top: 13%; margin-right: 10%;
 }
 /*BODY*/
 .container-2{
@@ -69,7 +78,8 @@ footer{width: 100%; background-color: RGBA(0, 0, 0, 0.75); color: white; margin-
 		}
 .form-2{ margin-top: 2%; border: 1px solid; border-color: #898585; padding: 2%; background: #fff; }
 .img-curs{ width: 50%; height:auto; border-radius: 10%;}
-.img-curs-2{ width: 100%; height:80%; border-radius: 10%;}
+.img-curs-2{ width: 80%; height:80%; border-radius: 10%;}
+.img-file{ width: 40%; border-radius: 5%;}
 .img-curs-detaill img{ width: 60%;}
 .img-pago{	background-image: url(../images/Fpagos.png); width: 50%; }
 .img-left{width:100%; height:30%;}
